# Senior-design

./: README.md  SeniorDesignFall2024.sln
CAR ASSISTANT LOC/: CAR_ASSISTANT_LOCApp.swift  ContentView.swift
CAR ASSISTANT LOC.xcodeproj/: project.pbxproj
CAR ASSISTANT LOCTests/: CAR_ASSISTANT_LOCTests.swift
CAR ASSISTANT LOCUITests/: CAR_ASSISTANT_LOCUITests.swift  CAR_ASSISTANT_LOCUITestsLaunchTests.swift
Database/: Database.csproj
DatabaseTest/: DatabaseTest.csproj  Program.cs  SdDbContextFactory.cs
ImagingDriver/: ImagingDriver.csproj
ImagingDriverTest/: ImagingDriverTest.csproj  Program.cs
ImportAnomaly/: CheckAnomalyClass.cs  MagicSquareClass.cs  (+10 more)
TmcDriver/: CMakeLists.txt  ITmcUart.cs  MotionControl.cs  MotionControlBackgroundService.cs  MotionControlComService.cs  TMC2209Driver.c  TMC2209Driver.h  TmcDriver.cs  TmcDriver.csproj  TmcDriverIc.cs  TmcDriverIcOptions.cs  TmcDriverOptions.cs  TmcDriverWrapper.cs  TmcFbControl.c  TmcFbControl.h  TmcUart.cs  TmcUartOptions.cs
TmcDriver/DI/: TmcUartProvider.cs
TmcDriver/Extensions/: TmcDriverExtension.cs
TmcDriver/HAL/Tmc2209/: Registers.cs
TmcDriver/Interfaces/: IMotionOperation.cs
TmcDriver/Properties/: launchSettings.json
TmcDriver/Types/: DriverInstance.cs  MotionAxisAbstract.cs  MotionAxisComplexLinear.cs  MotionAxisLinear.cs  MotionAxisRadial.cs  MotionOperation.cs
TmcDriver/tmc/helpers/: API_Header.h  Bits.h  CRC.c  Functions.c  Functions.h  RegisterAccess.h  Types.h
TmcDriver/tmc/ic/TMC2209/: TMC2209.c
TmcDriver/tmc/ramp/: LinearRamp.h  LinearRamp1.c  LinearRamp1.h  Ramp.c  Ramp.h
(+151 files in other folders)
